k8s/server.yaml
kind: Service
apiVersion: v1
metadata:
  name: node-k8s-service
spec:
  type: NodePort
  ports:
  - port: 9090
    targetPort: api-port
  selector:
    name: node-k8s-server

---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: node-k8s-deployment
spec:
  replicas: 1
  template:
    metadata:
      name: node-k8s-server
      labels:
        name: node-k8s-server
    spec:
      containers:
      - name: node-k8s-server
        image: eu.gcr.io/caglabs-155116/lab-1-node-k8s:1
        resources:
          limits:
            memory: "500Mi"
            cpu: "100m"
        imagePullPolicy: Always
        ports:
        - containerPort: 9090
          name: api-port
